# modular_variable

./: CMakeLists.txt  build_modular_variable.cmake  modular_variable.cmake  test.c
modvar/: bar.c.in  bar.internal.h.in  foo.h.in
